--- a/index.html
+++ b/index.html
@@ -6,22 +6,21 @@
   <meta name="robots" content="index, follow" />
   <meta name="description" content="Suara Indonesia adalah kanal dokumentasi visual pembangunan di Indonesia melalui video, foto, dan laporan lapangan." />
   <meta name="author" content="Suara Indonesia" />
-  <title>Suara Indonesia | Dokumentasi Pembangunan IKN</title>
+  <title>Suara Indonesia | Dokumentasi Pembangunan Indonesia</title>
 
-  <!-- Canonical (biarkan kosong atau domain GitHub Pages) -->
   <link rel="canonical" href="https://suara-indonesia.github.io/" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Suara Indonesia | Dokumentasi Pembangunan di Indonesia" />
-  <meta property="og:description" content="Kanal dokumentasi visual pembangunan di Indonesia dari lapangan." />
+  <meta property="og:title" content="Suara Indonesia | Dokumentasi Pembangunan Indonesia" />
+  <meta property="og:description" content="Kanal dokumentasi visual pembangunan nasional dari berbagai daerah di Indonesia." />
   <meta property="og:image" content="https://suara-indonesia.github.io/assets/images/og-image.webp" />
   <meta property="og:url" content="https://suara-indonesia.github.io/" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Suara Indonesia | Dokumentasi Pembangunan di Indonesia" />
-  <meta name="twitter:description" content="Dokumentasi visual pembangunan Indonesia dalam berbagai format." />
+  <meta name="twitter:title" content="Suara Indonesia | Dokumentasi Pembangunan Indonesia" />
+  <meta name="twitter:description" content="Dokumentasi visual pembangunan di seluruh penjuru Indonesia." />
   <meta name="twitter:image" content="https://suara-indonesia.github.io/assets/images/og-image.webp" />
 
   <!-- Schema.org JSON-LD -->
@@ -34,7 +33,7 @@
     "logo": "https://suara-indonesia.github.io/assets/images/logo.png",
     "sameAs": [
       "https://www.youtube.com/@dokumentatorIKN",
-      "https://www.instagram.com/sisilainikn"
+      "https://www.instagram.com/Suara-ID"
     ],
     "description": "Kanal dokumentasi visual independen yang menyajikan perkembangan pembangunan di Indonesia melalui media digital."
   }
@@ -87,6 +86,11 @@
       border-radius: 6px;
       text-decoration: none;
       font-weight: bold;
+      transition: background 0.3s ease;
+    }
+
+    a.button:hover {
+      background: #a00000;
     }
 
     footer {
@@ -108,17 +112,18 @@
     <section>
       <h2>Selamat Datang</h2>
       <p>
-        <strong>Suara Indonesia</strong> adalah kanal visual independen yang menyajikan perkembangan pembangunan di Indonesia. Kami hadir melalui video, foto udara, dan narasi lapangan yang jujur dan informatif.
+        <strong>Suara Indonesia</strong> adalah kanal visual independen yang menyajikan perkembangan pembangunan dari berbagai daerah di Indonesia. Kami hadir melalui video, foto udara, dan narasi lapangan yang jujur dan informatif.
       </p>
 
-      <h2>Temukan Kami di Media Sosial</h2>
-      <a href="https://www.youtube.com/@suara-id" class="button" target="_blank" rel="noopener">YouTube</a>
-      <a href="https://www.instagram.com/sisilainikn" class="button" target="_blank" rel="noopener">Instagram</a>
+      <h2>Jelajahi Konten Kami</h2>
+      <a href="artikel.html" class="button">Daftar Artikel</a>
+      <a href="https://www.youtube.com/@dokumentatorIKN" class="button" target="_blank" rel="noopener">YouTube</a>
+      <a href="https://www.instagram.com/Suara-ID" class="button" target="_blank" rel="noopener">Instagram</a>
     </section>
   </main>
 
   <footer>
-    &copy; 2025 Suara Indonesia. Semua dokumentasi disajikan untuk tujuan informasi dan edukasi.
+    &copy; 2025 Suara Indonesia. Kanal dokumentasi pembangunan nasional.
   </footer>
 </body>
 </html>
