--- a/artikel.html
+++ b/artikel.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+gan<!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
@@ -116,9 +116,9 @@
 
   <main>
     <div class="card">
-      <h2>Jembatan Baru di Perbatasan Kalimantan</h2>
-      <p>Infrastruktur penghubung antar wilayah kini sudah mulai dibuka untuk akses umum dan distribusi logistik.</p>
-      <a href="artikel-jembatan-kalimantan.html">Baca selengkapnya &raquo;</a>
+      <h2>Bendungan IKN Resmi dibuka untuk umum</h2>
+      <p>Bendungan Sepaku Semoi di Ibu Kota Nusantara Resmi dibuka untuk masyarakat umum dan sudah ada cafe yang beroperasi.</p>
+      <a href="artikel/bendungan-sepaku-semoi-resmi-dibuka.html">Baca selengkapnya &raquo;</a>
     </div>
     <div class="card">
       <h2>Pembangunan Bendungan untuk Ketahanan Air</h2>
